GNU Thales 0.9.5 (XX/XX/XXXX)
   - hardcoded url (motd, admin) changes to savannah.
   - Unreal's SWHOIS support.
   - server.lastsplit is not overwritten when a server rejoins.
   - changed "Thales" to "GNU Thales" where it was relevant.
   - renamed log() to mylog(), and log_perror() to mylog_perror() to prevent
     conflicts.
   - added TBUST to hybrid CAPAB line. Credits go to Wes Baehr
     <iwes@totalmac.net>
   - added a php script for clones detection. contributed by
	  Jens 'DukePyrolator' Voss <DukePyrolator@wiredirc.net>
   - added Unreal mode +M
Thales 0.9.4 (19/03/2003)
   - away status was not properly restored in Caching mode. (reported
     by admiral@ns.elbenstern.de)
   - renamed strlwr to strtolwr (misc.c) to be able to compile on cygwin.
   - improved ReportUsage.sh POSIX compatibility
   - added Unreal usermodes +R & +V
   - increased nickname length in SQL table user for hybrid ircd.
   - re-indented the whole code using indent
   - fixed bug in caching mode
   - added log messages to the hash functions in verbose mode
   - fixed bug in caching mode
Thales 0.9.3 (04/02/2003)
   - removed debug message
Thales 0.9.2 (03/02/2003)
   - added support for ultimate 2.8 +L chanmode
   - thales could receive SJOIN for nonexisting users under some race
     conditions. Now ignore them.
   - added a workaround for Unreal bug (sending multiple SJOINs for
     same (user, channel))
   - removed some compilation warnings
Thales 0.9.1 (12/02/2003)
   - fixed small parsing bug from ircservices code
   - fixed bugs in ultimate 2.8 support
   - ability to hide channel passwords in config file
   - included Wes Baehr's patch to fix TOPICs on Hybrid
   - added --enable-noreportusage configure option to disable the usage report
   - new hash function (should improve performance)
   - Modified ReportUsage.sh to send mail to thales-usage@ and include Thales
     version.
   - SQL tables names are defined in db.h. They can be changed.
Thales 0.9.0 (05/11/2002)