@@ -371,7 +371,7 @@ static void m_sdesc(char *source, int ac, char **av)
 }
 
 /* SWHOIS - forwarded */
-static void m_setname(char *source, int ac, char **av)
+static void m_swhois(char *source, int ac, char **av)
 {
 	do_swhois(source, av[0]);
 }
